only gen json schema for requests
